--- a/server/backend/requirements.txt
+++ b/server/backend/requirements.txt
@@ -1,3 +1,6 @@
+uvicorn[standard]==0.15.0
+gunicorn==20.1.0
+fastapi==0.68.1
 paho-mqtt==1.5.1
 SQLAlchemy==1.3.21
 python-dotenv==0.15.0
@@ -5,3 +8,4 @@ psycopg2-binary==2.8.6
 alembic==1.4.3
 pytest==6.2.1
 pydantic==1.7.3
+
